--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,10 +1,8 @@
 .app {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
   height: 100vh;
-}
-
-.app h1 {
-  margin-block: 0;
+  background-color: var(--dark-color);
+  padding: 50px 0;
 }
