--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,7 +1,8 @@
 .app {
   display: flex;
-  align-items: flex-start;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
   height: 100vh;
   background-color: var(--dark-color);
   padding: 50px 0;
